--- a/MVC/Views/Shared/_AdminLayout.cshtml
+++ b/MVC/Views/Shared/_AdminLayout.cshtml
@@ -3,15 +3,15 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - MVC</title>
+    <title>@ViewData["Title"] - Admin</title>
 
     <link rel="stylesheet" href="~/css/styles.css" asp-append-version="true" />
 
 </head>
 <body>
     <header>
-    </header>
 
+    </header>
 
     <div class="container">
         <main role="main" class="pb-3">
@@ -23,9 +23,6 @@
     <footer class="border-top footer text-muted">
     </footer>
 
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
